@@ -9315,16 +9315,18 @@ Return the vector of the $T_i$, and set \kbd{*E} to the vector of the $e_i$,
 as a \typ{VECSMALL}.
 
 \fun{GEN}{ZX_Uspensky}{GEN P, GEN ab, long flag, long bitprec} let \kbd{P} be a
-primitive \kbd{ZX} polynomial whose real roots are simple and \kbd{bitprec} is
-the relative precision in bits.
+\kbd{ZX} polynomial whose real roots are simple and \kbd{bitprec} is the
+relative precision in bits. For efficiency reasons, \kbd{P} should not only
+have simple real roots but actually be primitive and squarefree, but the
+routine neither checks nor enforces this, and it returns correct results in
+this case as well.
 
 \item If \kbd{flag} is 0 returns a list of intervals that isolate the real
 roots of \kbd{P}. The return value is a column of elements which are either
-vectors \kbd{[a,b]} meaning that there is a single root in the open interval
-\kbd{(a,b)} or elements \kbd{x0} such that \kbd{x0} is a root of \kbd{P}.
-There is no guarantee that all rational roots are found (at most those with
-denominator a power of $2$ can be found and even those are not guaranteed).
-Beware that the limits of the open intervals can be roots of the polynomial.
+vectors \kbd{[a,b]} of rational numbers meaning that there is a single
+non-rational root in the open interval \kbd{(a,b)} or elements \kbd{x0} such
+that \kbd{x0} is a rational root of \kbd{P}. Beware that the limits of the
+open intervals can be roots of the polynomial.
 
 \item If \kbd{flag} is 1 returns an approximation of the real roots of \kbd{P}.
 
